--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -52,11 +52,11 @@ header img {
 }
 @media (max-width: 1050px) {
   header {
-    position: relative;
+    /* position: relative; */
   }
   header img {
-    width: 34rem;
-    height: 34rem;
+    width: 27rem;
+    height: 27rem;
   }
   .content {
     width: 50%;
@@ -67,23 +67,35 @@ header img {
     font-size: 2.3rem;
   }
   .hero-image {
-    position: absolute;
+    /* position: absolute; */
     /* position: relative; */
-    z-index: -20;
+    /* z-index: -20;
     top: 4rem;
-    right: 0;
+    right: 0; */
   }
 }
 @media (max-width: 850px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
   .content {
-    width: 55%;
+    /* width: 55%; */
     margin-top: 2rem;
+  }
+  header img {
+    width: 100%;
+    height: 36rem;
   }
 }
 @media (max-width: 800px) {
   .content {
     width: 60%;
     margin-top: 2rem;
+  }
+  header img {
+    /* width: 18rem;
+    height: 18rem; */
   }
 }
 @media (max-width: 700px) {
@@ -105,10 +117,3 @@ header img {
     margin-top: 2rem;
   }
 }
-/* @media (max-width: 880px) {
-  header {
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
-    https://whippy.onrender.com/api/save-wait-list
-  }
-} */
